changes to stylesheet to correct display error on mobile devices

--- a/style.css
+++ b/style.css
@@ -1672,8 +1672,13 @@ font-family: Arial, Helvetica, sans-serif;
   gap: 1em  ;
   text-align: center;
   margin-top: 2.5em;
-  
 }
+.product {
+  width: 100%;
+
+}
+
+
 .products img {
   max-width: 80%;
 }
